--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "@types/node": "^16.9.1",
     "elasticsearch": "^16.7.2"
   },
+  "scripts": {
+    "prepareDeployment": "npx tsc",
+    "sandbox": "nodemon sandbox.ts"
+  },
   "devDependencies": {
     "@types/elasticsearch": "^5.0.38",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "nodemon": "^2.0.12"
   }
 }
