--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^16.9.1",
-    "elasticsearch": "^16.7.2"
+    "@elastic/elasticsearch": "^7.14.1",
+    "@types/node": "^16.9.1"
   },
   "scripts": {
     "prepareDeployment": "npx tsc",
     "sandbox": "nodemon sandbox.ts"
   },
   "devDependencies": {
-    "@types/elasticsearch": "^5.0.38",
-    "typescript": "^4.4.2",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "typescript": "^4.4.2"
   }
 }
